QuickDesigner: Remove dependency of autotests to tests/manual/qml
Copy over used files to tests/auto/qml/qmldesigner/data directory.

--- a/tests/auto/qml/qmldesigner/data/testfiles.qrc
+++ b/tests/auto/qml/qmldesigner/data/testfiles.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/" >
+    <qresource prefix="/">
         <file>fx/attributes.qml</file>
         <file>fx/empty.qml</file>
         <file>fx/helloworld.qml</file>
@@ -7,5 +7,6 @@
         <file>qwidget/test.qml</file>
         <file>fx/topitem.qml</file>
         <file>fx/subitems/SubItem.qml</file>
+        <file>fx/states.qml</file>
     </qresource>
 </RCC>
