--- a/src/plugins/fakevim/fakevimoptions.ui
+++ b/src/plugins/fakevim/fakevimoptions.ui
@@ -163,6 +163,16 @@
        <widget class="QLineEdit" name="lineEditBackspace"/>
       </item>
       <item row="9" column="0">
+       <widget class="QLabel" name="labelIsKeyword">
+        <property name="text">
+         <string>Keyword characters:</string>
+        </property>
+       </widget>
+      </item>
+      <item row="9" column="1" colspan="2">
+       <widget class="QLineEdit" name="lineEditIsKeyword"/>
+      </item>
+      <item row="10" column="0">
        <spacer name="verticalSpacer">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
@@ -178,7 +188,7 @@
         </property>
        </spacer>
       </item>
-      <item row="10" column="0" colspan="3">
+      <item row="11" column="0" colspan="3">
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QPushButton" name="pushButtonCopyTextEditorSettings">
