Make it possible to clear keyboard shortcuts again
This was an unintentional regression. The widget in
question should not use the filter edit since it is not
a filterwidget. Also I removed the "Filter" text which
is incorrect in this case.

Task-number: QTCREATORBUG-1308

--- a/src/plugins/coreplugin/actionmanager/commandmappings.ui
+++ b/src/plugins/coreplugin/actionmanager/commandmappings.ui
@@ -112,7 +112,7 @@
          </widget>
         </item>
         <item>
-         <widget class="Utils::FilterLineEdit" name="targetEdit"/>
+         <widget class="Utils::FancyLineEdit" name="targetEdit"/>
         </item>
         <item>
          <widget class="QToolButton" name="resetButton">
@@ -161,6 +161,11 @@
   </layout>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>Utils::FancyLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header location="global">utils/fancylineedit.h</header>
+  </customwidget>
   <customwidget>
    <class>Utils::FilterLineEdit</class>
    <extends>QLineEdit</extends>
