Use Open Project button in Getting Started mode
We already have it in the projects mode so we might as well
use the same in "Getting Started".

Reviewed-by: danimo

--- a/src/plugins/projectexplorer/projectwelcomepagewidget.ui
+++ b/src/plugins/projectexplorer/projectwelcomepagewidget.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>486</width>
+    <width>520</width>
     <height>221</height>
    </rect>
   </property>
@@ -153,10 +153,6 @@
           <property name="text">
            <string>Create Project...</string>
           </property>
-          <property name="icon">
-           <iconset resource="../coreplugin/core.qrc">
-            <normaloff>:/core/images/filenew.png</normaloff>:/core/images/filenew.png</iconset>
-          </property>
           <property name="flat">
            <bool>false</bool>
           </property>
@@ -182,8 +178,6 @@
    <header location="global">utils/welcomemodetreewidget.h</header>
   </customwidget>
  </customwidgets>
- <resources>
-  <include location="../coreplugin/core.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
