Polish the min/max output pane button
We used to use the arrow up/down primitives for this button.
This looks broken in a lot of styles so we now use a proper
icon. Note that setDefaultAction is a bit broken at the moment
since it doesnt propagate the icon change.

Reviewed-by: thorbjorn

--- a/src/plugins/coreplugin/core.qrc
+++ b/src/plugins/coreplugin/core.qrc
@@ -57,5 +57,7 @@
         <file>images/darkarrowdown.png</file>
         <file>images/darkarrowup.png</file>
         <file>images/darkclose.png</file>
+        <file>images/arrowdown.png</file>
+        <file>images/arrowup.png</file>
     </qresource>
 </RCC>
