Fix text color on combobox popup in welcome screen
The text color was incorrect for certain dark color schemes,
including the latest Ubuntu theme.

--- a/src/plugins/welcome/welcomemode.ui
+++ b/src/plugins/welcome/welcomemode.ui
@@ -22,7 +22,7 @@ QToolButton, QPushButton, QComboBox {
     font-size: 12px;
 }
 
-*{
+QToolButton, QPushButton, QComboBox, QLabel {
     color: black;
 }
 
