Optimize welcome mode startup a bit
The scaled pixmap has been reduced in size to speed up the
plugin loading and refresh times. Stylesheet has been
slightly optimized as well.

--- a/src/plugins/welcome/welcomemode.ui
+++ b/src/plugins/welcome/welcomemode.ui
@@ -76,12 +76,7 @@ QToolButton:pressed, QPushButton:pressed{
    <item>
     <widget class="QWidget" name="gradientWidget" native="true">
      <property name="styleSheet">
-      <string notr="true">/*
-#gradientWidget {
-  background-color: qlineargradient(spread:pad, x1:0.5, y1:0, x2:1.0, y2:1, stop:0 rgba(240, 240, 240, 255), stop:1 rgba(200, 200, 200, 255));
-}
-*/
-#gradientWidget {
+      <string notr="true">#gradientWidget {
     border-image: url(:/welcome/images/welcomebg.png) 0;
 }
 </string>
