--- a/src/plugins/qmlprojectmanager/qmlproject.qrc
+++ b/src/plugins/qmlprojectmanager/qmlproject.qrc
@@ -3,5 +3,6 @@
         <file>QmlProject.mimetypes.xml</file>
         <file>images/qmlfolder.png</file>
         <file>images/qmlproject.png</file>
+        <file>images/qml_wizard.png</file>
     </qresource>
 </RCC>
